# oib-converter

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  justfile  mapping.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  claude-review.yml  secret-scan.yml
scripts/: fetch-graph-schema.sh  fetch-oib-profiles.sh
src/oib_converter/: __init__.py  converter.py
