[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oib-converter"
version = "1.0.0"
description = "Convert OpenIntuneBaseline JSON profiles to Apple mobileconfig format"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Talieisin", email = "it@talieisin.com" }
]
keywords = [
    "mobileconfig",
    "apple",
    "intune",
    "mdm",
    "openintunebaseline",
    "defender",
    "configuration-profile",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "msal>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
oib-converter = "oib_converter.converter:main"

[project.urls]
Homepage = "https://github.com/Talieisin/oib-converter"
Documentation = "https://github.com/Talieisin/oib-converter#readme"
Repository = "https://github.com/Talieisin/oib-converter.git"
Issues = "https://github.com/Talieisin/oib-converter/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/oib_converter"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true

# uv configuration
[tool.uv]
default-groups = ["dev"]
